// https://dbdiagram.io/d

Table customer as C {
    id         varchar(11) [pk, note: 'CPF without special characters']
    name       varchar(50) [not null]
    address_id varchar     [ref: -      address.id]
    telephone  varchar(14) [not null]
    gender     varchar(1)
    birth_date date
}

Table movie as M {
    id       varchar(32)  [pk, note: 'uuid4 without special characters']
    title    varchar(100) [not null]
    synopsis varchar(250) [not null]
    gender   varchar(50)  [not null]
}

Table rent as R {
    id          varchar(32)   [pk, note: 'uuid4 without special characters']
    customer_id varchar       [ref: > customer.id]
    movie_id    varchar       [ref: > movie.id]
    rented      date          [default: `now()`]
    returned    date
    value       decimal(10,2) [not null]
}

Table address as A {
    id           varchar(32)  [pk, note: 'uuid4 without special characters']
    address      varchar(250) [not null]
    zipcode      varchar(8)   [not null, note: 'CEP without special characters']
    city         varchar(50)  [default: 'Uberlândia']
    neighborhood varchar(50)  [not null]
    state        varchar(50)  [default: 'Minas Gerais']
}
